force-app/main/default/objects/Asset_Finance_AMBIT__x/Asset_Finance_AMBIT__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>AssetFinanceAMBIT</externalName>
    <label>Asset Finance AMBIT</label>
    <pluralLabel>Asset Finances AMBIT</pluralLabel>
</CustomObject>