force-app/main/default/objects/Asset_Finance_AMBIT__x/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Account Status</description>
    <externalDeveloperName>AccountStatus</externalDeveloperName>
    <label>Account Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>