force-app/main/default/objects/Asset_Finance_AMBIT__x/fields/Amount_in_Arrears__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Arrears__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Amount in Arrears</description>
    <externalDeveloperName>AmountInArrears</externalDeveloperName>
    <label>Amount in Arrears ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>