force-app/main/default/objects/Asset_Finance_AMBIT__x/fields/Balloon_Payments__c.field-meta.xml
<CustomField>
    <fullName>Balloon_Payments__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Balloon Payments</description>
    <externalDeveloperName>BalloonPayments</externalDeveloperName>
    <label>Balloon Payments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>