force-app/main/default/objects/Asset_Finance_AMBIT__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Associated Id of Customer</description>
    <externalDeveloperName>CustomerId</externalDeveloperName>
    <label>Customer</label>
    <length>18</length>
    <referenceTargetField>Account.External_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Finances AMBIT</relationshipLabel>
    <relationshipName>Asset_Finances_AMBIT</relationshipName>
    <type>IndirectLookup</type>
</CustomField>