force-app/main/default/objects/Asset_Finance_AMBIT__x/fields/Facility_Expiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Expiry_Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Facility Expiry Type</description>
    <externalDeveloperName>FacilityExpiryType</externalDeveloperName>
    <label>Facility Expiry Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>