force-app/main/default/objects/Asset_Finance_AMBIT__x/fields/Int_Type__c.field-meta.xml
<CustomField>
    <fullName>Int_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Classification of interest rates based on their variation over the term of an agreement or a portion of this term. This classification can be of a fixed or variable nature.</description>
    <externalDeveloperName>IntType</externalDeveloperName>
    <label>Interest Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>