force-app/main/default/objects/Asset_Finance_AMBIT__x/fields/Loan_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_Months__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Length of original contract</description>
    <externalDeveloperName>LoanTermMonths</externalDeveloperName>
    <label>Loan Term (Months)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>