force-app/main/default/objects/Asset_Finance_AMBIT__x/fields/Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Opened_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>The date the account record was established</description>
    <externalDeveloperName>OpenedDate</externalDeveloperName>
    <label>Date Opened</label>
    <length>50</length>
    <type>Text</type>
</CustomField>