force-app/main/default/objects/Asset_Finance_AMBIT__x/fields/Original_Amount_Financed__c.field-meta.xml
<CustomField>
    <fullName>Original_Amount_Financed__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Original Loan Amount</description>
    <externalDeveloperName>OriginalAmountFinanced</externalDeveloperName>
    <label>Original Amount Financed ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>