force-app/main/default/objects/Asset_Finance_AMBIT__x/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>The ANZ product code</description>
    <externalDeveloperName>ProductCode</externalDeveloperName>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>