force-app/main/default/objects/Asset_Finance_AMBIT__x/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>The ANZ product code</description>
    <externalDeveloperName>ProductName</externalDeveloperName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>