force-app/main/default/objects/Asset_Finance_AMBIT__x/fields/SI__c.field-meta.xml
<CustomField>
    <fullName>SI__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Security Indicator</description>
    <externalDeveloperName>SI</externalDeveloperName>
    <label>Security Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>