force-app/main/default/objects/Asset_Finance_AMBIT__x/fields/Undrawn_Balance__c.field-meta.xml
<CustomField>
    <fullName>Undrawn_Balance__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Balance Available for product sent from ANZ System </description>
    <externalDeveloperName>UndrawnBalance</externalDeveloperName>
    <label>Undrawn Balance ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>